fix second homework

--- a/Homework.ipynb
+++ b/Homework.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "#0.3 points\n",
     "i = 1\n",
-    "while j < n:\n",
+    "while i < n:\n",
     "    something() #O(1)\n",
     "    i = i*2"
    ]
@@ -77,6 +77,16 @@
     "    j = j + i\n",
     "    i = i + 1"
    ]
+  },
+  {
+   "source": [
+    "## 2. Hash Table. (October 30)\n",
+    "Implement hash table for elements like (key=big number, value=string), where big number is something like 57324687956.\n",
+    "\n",
+    "With Separate chaining - 0.7 points. With Open addressing - 1 point."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
