--- a/Homework.ipynb
+++ b/Homework.ipynb
@@ -72,7 +72,7 @@
     "#0.4 points\n",
     "i = 1\n",
     "j = 1\n",
-    "while i < n:\n",
+    "while j < n:\n",
     "    something() #O(1)\n",
     "    j = j + i\n",
     "    i = i + 1"
