--- a/10-07 Search Tree.ipynb
+++ b/10-07 Search Tree.ipynb
@@ -202,13 +202,13 @@
     "\n",
     "1. If the left subtree of left child is deeper (by 1) than right subtree - in this situation we can exchange places of parent and left child. Right subtree of left child become a new left subtree of parent (after it become right child). In that case the depth of L (h+1, where h depth of R) become equal to depth of C + 1 = h + 1\n",
     "\n",
-    "![avl_leftLittle] (images/AVL_LL.gif)\n",
+    "![avl_leftLittle](images/AVL_LL.png)\n",
     "\n",
     "2. If the left subtree of left child depth equal to the right subtree - (actualy impossible) L = C = h + 1, this case is the same to previous one because when we move C to the right (it become left subtree for 'a') it's depth with element a become bigger than depth of L by 1 (C + 1 = h+1 + 1 = h + 2, L = h + 1)\n",
     "\n",
     "3. If the right subtree of left child deeper (by 1) than left subtree - This case is the most difficult because if we just move 'b' to possition 'a' nothing will change and the right subtree for 'b' element become depeer than L by 2 (because C = h + 1; C + a = h+1 + 1 = h + 2 and L = h). What to do? Let's made subtree L depeer than C by the same 'rotation' as in 1 and 2 cases (but in other direction). For our example we create element 'c' that was right child of 'b' and move it up. Now 'c' become the left child of 'a' and 'b' left child of 'c'. And here we got first case where we already know how to work.\n",
     "\n",
-    "![avl_leftBig] (images/AVL_BL.gif)\n",
+    "![avl_leftBig](images/AVL_BL.png)\n",
     "\n",
     "Ok, for the mirror situations for the right subtree (when it bigger than left one) all the same. But here we use some assume that subtrees alredy balanced, but how we can achieve this? Simple, we can just use the recursion from the new element, climb up and balance the tree up to the root (from one element to it's parent) [here] (https://en.wikipedia.org/wiki/File:AVL_Tree_Example.gif) the link to good animation of this process.\n",
     "\n",
@@ -248,7 +248,7 @@
     "\n",
     "As you probably guessed the third case (when current node key is grater than K) is symmetrical to the second, but we exchange left tree operations with the right one because current node K bigger then K we take a whole right tree plus some elements from the left tree.\n",
     "\n",
-    "![cartesianSplit] (images/cartesianSplit.png)"
+    "![cartesianSplit](images/cartesianSplit.jpg)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -280,7 +280,7 @@
     "\n",
     "Ok, now when we can split, let's look at how to merge to array. With this to function we can add,remove elements inside cartesian Tree or... merge array). However, there is a limitation for the function `merge` - it can merge only the trees one of which has all keys less than the other. Let's take two trees \"left\" and \"right\". Left tree have all keys less than right one. If it not the truth we shuld build new tree manualy by adding each element from one tree to another.\n",
     "\n",
-    "![cartesianMerge] (images/cartesianMerge.png)\n",
+    "![cartesianMerge](images/cartesianMerge.jpg)\n",
     "\n",
     "Simillar to split function we will make recursive function `merge`. First of all we take the root of the tree where the value is bigger (because, how you can remember for values there are used heap contruction). This new node will be the root of our new tree. But what about subtrees of this node? There two symmetrical cases - when we take the root from left tree or from right. Let's take a root from the left tree. In this case key of our new node is less than all keys from right tree, bigger than all keys from left subtree of left tree and less than all keys in right subtree of left tree. So we need take left subtree of left tree as new lefy subtree, and in right merge right subtree and right tree to take a merged tree with the keys grater than current. In picture - we take T1 as root T. Left subtree of T1 less than T by key so it will be the left subtree of T. Right subtree of T1 and T2 has keys grater than key T. This mean we need merge them to take a new tree. So let's just call merge on (T1.right, T2) and save result tree as T.right. That all)"
    ],
