--- a/10-07 Strings.ipynb
+++ b/10-07 Strings.ipynb
@@ -57,7 +57,7 @@
         "age = 25\n",
         "print(\"Hello, my name is \" + name + \". I am \" + str(age) + \" years old.\")\n"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,8 +67,15 @@
       ]
     },
     {
+      "source": [
+        "Plus to this strings is a array of charecters and you can work with them like an array:"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "tags": []
       },
@@ -76,14 +83,15 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "where is my mouse\n"
+          "text": "where is my mouse\nhere i\n"
         }
       ],
       "source": [
         "first = \"where is\"\n",
         "second = \"my mouse\"\n",
         "result = first + \" \" + second\n",
-        "print (result)"
+        "print (result)\n",
+        "print (result[1:7])"
       ]
     },
     {
@@ -170,14 +178,15 @@
         "tags": []
       },
       "source": [
-        "print(\"My name is {}. I am {} years old.\".format(name, age))"
+        "print(\"My name is {}. I am {} years old.\".format(name, age))\n",
+        "print(\"My name is {}. I am {} years old.\".format(age, name))"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "My name is Andrew. I am 25 years old.\n"
+          "text": "My name is Andrew. I am 25 years old.\nMy name is 25. I am Andrew years old.\n"
         }
       ]
     },
@@ -226,7 +235,7 @@
         "tags": []
       },
       "source": [
-        "print(\"My name is {0}. Is my name really {0}...? Of course, my name is {0}\".format(name)) "
+        "print(\"My name is {0}. Is my name really {1}...? Of course, my name is {0}\".format(name, age)) "
       ],
       "execution_count": 7,
       "outputs": [
@@ -475,6 +484,46 @@
           "text": "1.8\n"
         }
       ]
+    },
+    {
+      "source": [
+        "So, mechanism of f-string is realy powerfull and can help you in diffrent situation"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "1,2,3\n1.2.3\nnot a {0}, but {1}\nnot a {1}, but {2}\n\nnot a 1, but 2\nnot a 2, but 3\n"
+        }
+      ],
+      "source": [
+        "\n",
+        "print (\",\".join(['1','2','3']))\n",
+        "a = [1,2,3]\n",
+        "print (f\"{a[0]}.{a[1]}.{a[2]}\")\n",
+        "\n",
+        "s = \"\"\n",
+        "for i in range(len(a) -1 ):\n",
+        "    s += f\"not a {{{i}}}, but {{{i+1}}}\\n\"\n",
+        "print (s)\n",
+        "print (s.format (*a)[:-1])"
+      ]
+    },
+    {
+      "source": [
+        "* mean create from the list a 'list' of arguments for some function (because they need *args, not a list)"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     }
   ]
 }
