--- a/10-07 Search Tree.ipynb
+++ b/10-07 Search Tree.ipynb
@@ -301,10 +301,14 @@
     "    if (tree1.data >= tree2.data):\n",
     "        resultTree.right = merge (tree1.right, tree2)\n",
     "        resultTree.left = tree1.left\n",
+    "        resultTree.data = tree1.data\n",
+    "        resultTree.key = tree1.key\n",
     "\n",
     "    if (tree2.data > tree1.data):\n",
     "        resultTree.left = merge (tree1, tree2.left)\n",
     "        resultTree.right = tree2.right\n",
+    "        resultTree.data = tree2.data\n",
+    "        resultTree.key = tree2.key\n",
     "    \n",
     "    return resultTree"
    ]
