--- a/10-14 Cartesian Tree 2, Segment Tree.ipynb
+++ b/10-14 Cartesian Tree 2, Segment Tree.ipynb
@@ -240,9 +240,9 @@
     "\n",
     " However in this case we need some mechanism to remember changes in segment. But we already have a node that represent our segment. Lets then write a changes inside this node. And when we meet it in the process of calculating the value of the function we apply changes for function result and save how much required to change the data in the segment in the children's elements. \n",
     "\n",
-    " ![segmentTreeLazy](images/segmentTreeLazy.jpg)\n",
+    " ![segmentTreeLazy](images/segmentTreeLazy.png)\n",
     " \n",
-    " ![segmentTreeLazy2](images/segmentTreeLazy2.jpg)\n",
+    " ![segmentTreeLazy2](images/segmentTreeLazy2.png)\n",
     "\n",
     " So the final moment is to understand how to change function value if you know how much values of elements have 'changed'. Unfortunately you have to answer to this question by yourself because for every function there are individual scheme of work. For example for sum function we need add the change multiply by number of elements in segment (we can save it inside each node). And for maximum function (`RMQ task`) we need just add to previous max the value of the change.\n",
     "\n",
