--- a/10-14 Cartesian Tree 2, Segment Tree.ipynb
+++ b/10-14 Cartesian Tree 2, Segment Tree.ipynb
@@ -242,7 +242,7 @@
     "\n",
     " ![segmentTreeLazy](images/segmentTreeLazy.png)\n",
     " \n",
-    " ![segmentTreeLazy2](images/segmentTreeLazy2.png)\n",
+    " [segmentTreeLazy2](images/segmentTreeLazy2.png)\n",
     "\n",
     " So the final moment is to understand how to change function value if you know how much values of elements have 'changed'. Unfortunately you have to answer to this question by yourself because for every function there are individual scheme of work. For example for sum function we need add the change multiply by number of elements in segment (we can save it inside each node). And for maximum function (`RMQ task`) we need just add to previous max the value of the change.\n",
     "\n",
