--- a/10-14 Cartesian Tree 2, Segment Tree.ipynb
+++ b/10-14 Cartesian Tree 2, Segment Tree.ipynb
@@ -103,13 +103,12 @@
     "    if (tree1.data >= tree2.data):\n",
     "        resultTree.right = merge (tree1.right, tree2)\n",
     "        resultTree.left = tree1.left\n",
-    "        resultTree.subtreeSum = resultTree.right + resultTree.left + 1\n",
     "\n",
     "    if (tree2.data > tree1.data):\n",
     "        resultTree.left = merge (tree1, tree2.left)\n",
     "        resultTree.right = tree2.right\n",
     "\n",
-    "    resultTree.subtreeSum = resultTree.right if resultTree.right != None else 0 + resultTree.left if resultTree.left != None else 0 + 1\n",
+    "    resultTree.subtreeSum = resultTree.right.subtreeSum if resultTree.right != None else 0 + resultTree.left.subtreeSum if resultTree.left != None else 0 + 1\n",
     "    \n",
     "    return resultTree"
    ]
