--- a/10-21 Greedy algorithm.ipynb
+++ b/10-21 Greedy algorithm.ipynb
@@ -129,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "15\n12\n10\n8\n6\n"
+      "15\n12\n10\n8\n6\nsum = 51\nright sum = 51\n"
      ]
     }
    ],
@@ -144,11 +144,22 @@
     "coins = [15,3,12,6,10,8,3,2,5]\n",
     "k = 5\n",
     "i = 0\n",
+    "s = 0\n",
     "while i < k:\n",
     "    m = max (coins) # Take the biggest element in each step\n",
     "    coins.remove (m)\n",
     "    print (m)\n",
-    "    i+=1"
+    "    i+=1\n",
+    "    s+=m\n",
+    "print (\"sum = \" + str(s))\n",
+    "\n",
+    "coins = [15,3,12,6,10,8,3,2,5] #calc right answer with full search\n",
+    "s = 0\n",
+    "from functools import reduce\n",
+    "from itertools import permutations\n",
+    "for i in permutations (coins,k):\n",
+    "    s = max(s, reduce(lambda x,y: x+y, i))\n",
+    "print (\"right sum = \" + str(s))"
    ]
   },
   {
@@ -177,7 +188,22 @@
     "\n",
     " - Empty subset from S is element(set is element!) of I\n",
     " - If A is subset of B and B is element of I than A is element of I\n",
-    " - If |A| < |B| than there is element x in B\\A that can create a new set `A with x` that will be element of I."
+    " - If |A| < |B| than there is element x in B\\A that can create a new set `A with x` that will be element of I.\n",
+    "\n",
+    " To be honest this method just describe requirements for Greedy algorithm in mathematic language. But it should help you to more clearly understand what happens.\n",
+    "\n",
+    "So, lets take a look into two examples. First one - `the correct`. For example lets take the coins example. So, we have `N` coins and we need no more than `K` coins with maximum sum. We have the set of coins `X = {x1,x2,...,xN}`, and we will have the `I = {i1,i2,...,iN}` - set of subsets of length at most K. In other world `ik = {y1,y2,..,yk}` is the subset of `X` where `k < K`. Now lets check that all properties are carried out.\n",
+    "  \n",
+    " - For `K=0` we have the empty set of coins `i = {}` which is part of `I`, because it size is `0 < K`.\n",
+    " - Let is assume that `B` is the set of coins and part of `I` where `k=|B|` and `A` is subset of `B`. Because `A` has the number of coin less than `B` (we take only some coins from `B`) and as a consequence less than `K` - it is part of `I`.\n",
+    " - Let is assume that `A` and `B` are sets of coins with sizes less than K (there are from the `I`) and `|A| < |B|`. And lets take any elements from `B\\A` and call it `x`. Than if we add `x` to `A` we got a new set of coins `A1`. It size will be equal or less than `B` because the size of `A` less than `B` and one new coin can't made `A` bigger than `B`. Than `|A1| <= |B| < K` Q.E.D. .\n",
+    " \n",
+    " Now, the another one example - incorrect. Lets take the task about the Backpack. As a reminder - we need take some packages into our backpack with `V` volume with maximum cost of taken packages. Each package has cost and volume. And there are `N` different packages, Ok, lets assume that `X = {x1,x2,..,xN}` is the set of our packages. And let's assume that `I = {i1,..,iK}` is set set of subsets with the volume less than `V`. Ok, now about matroids:\n",
+    "  - The empty set is the part of `I`, because the volume of empty set is 0 wich is less than `V`.\n",
+    "  - Let is assume that `B` is the set of packages with volume less than `V` and `A` is subset of `B`. Because the subset of `B` has less packages with less volume than we can say, that `|A| < |B| < V` and that is mean that `A` is part of `I`.\n",
+    "  - And finally let is assume that `A` and `B` are sets of packages with the volume less than `V` and `|A| < |B|`. Let's take any element from `B\\A` and call it `x`. And we meet the problem, because for some `A` and `B` may not exist such x. For example if `|B| - |A| = 1` and minimum package volume is 2. So, we can't add to any `A` some element to made from it new `A1` that will be the part of matroid. And because of this this task can not be solved by Greedy algorithm.\n",
+    "\n",
+    "  In simple words, in third condition we shoed that we can't reach the result from any step of algorithm and that mean, that greedy algorithm should think about future and correctness of it actions. And it doesn't.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
