--- a/11-04 Prefix Function.ipynb
+++ b/11-04 Prefix Function.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "## Substring search\n",
     "\n",
-    "As we know in computer world and bioinformatics in particular very often strings are used. You need to compare different DNA or RNA sequences with each other to find something. And the most famous task that you should was hear is find substring inside some string. For example classic word 'abracadabra' and we need find out is there substring 'bra' and if yes - where?\n",
+    "As we know in computer world and bioinformatics in particular very often strings are used. You need to compare different DNA or RNA sequences with each other to find something. And the most famous task that you should was hear is find substring inside some string. For example classic word `S`='abracadabra' and we need find out is there substring `C`='bra' and if yes - where?\n",
     "\n",
     "In this string you already see two variants of string 'bra' at second and ninth positions, but what to do with the text with the length about billions of characters (to compare billion of character is only about 1 Gb data, and Wikipedia contain about hundreds Gb of texts).\n",
     "\n",
@@ -64,7 +64,7 @@
    "source": [
     "## Prefix function\n",
     "\n",
-    "First of all, we need find the string inside some text. Usual prefix or suffix not help us to do this, but what if we write our string before text like 'string#Ttttttteeeeeeeexxxxxxxstringttttttttt', than our prefix with length of string will be exactly our string. And to find it inside the text we need find where the prefix occurs again in the text. Function, that calculate it for each position inside the text called prefix-function.\n",
+    "First of all, we need find the string inside some text. Usual prefix or suffix not help us to do this, but what if we write our string before text like `string#Ttttttteeeeeeeexxxxxxxstringttttttttt`, than our prefix with length of string will be exactly our string. And to find it inside the text we need find where the prefix occurs again in the text. Function, that calculate it for each position inside the text called prefix-function.\n",
     "\n",
     "`The prefix function` is the function that for each position inside string calculate the maximum length of the suffix of substring \\[0;i\\] that matches suffix of this string. In other world we take our string length S, cut from it the peace (0;i) and calculate how many symbols at the beginning matches symbols at the end.\n",
     "\n",
@@ -79,9 +79,9 @@
     "![prefix_compare](images/11-04/prefix-comare.jpg)\n",
     "\n",
     "- `p(i) <= p(i-1) + 1` - just because when we calculate this function at te next position we only can get that `s[p(i-1)] == s[i]` or `s[p(i-1)] != s[i]` mean that when we move to the next position we try to compare the two new symbols at them. So, if them is equal our prefix will become longer by one. And if not the prefix become shote which is written in the inequality.\n",
-    "- So, we already know what we should do if our symbols `s[p(i-1)] == s[i]` -> just write that out p(i) = p(i-1) + 1. But what we should do if they is not equal? Let is look to prefix function more closer. After we meet the symbols that are not equal we need to search new one prefix that match our current suffix. But wait, because all others symbols of suffix is equal to our prefix or in other words substrings `s[0;k]` and `s[i-k-1;i-1]` is equal we know that all symbols except the last one of `s[0;p(i)]` will be the same as in previous one function. So we can just calculate our function for position `p(i-1)` and find if it match with new symbols. In other words we take previously calculated result for our substring and check only last symbols. After that just recursively go to bottom till meat the situation when it match correctly of when we meet zero.\n",
+    "- So, we already know what we should do if our symbols `s[p(i-1)] == s[i]` -> just write that out `p(i) = p(i-1) + 1`. But what we should do if they is not equal? Let is look to prefix function more closer. After we meet the symbols that are not equal we need to search new one prefix that match our current suffix. But wait, because all others symbols of suffix is equal to our prefix or in other words substrings `s[0;k]` and `s[i-k-1;i-1]` is equal we know that all symbols except the last one of `s[0;p(i)]` will be the same as in previous one function. So we can just calculate our function for position `p(i-1)` and find if it match with new symbols. In other words we take previously calculated result for our substring and check only last symbols. After that just recursively go to bottom till meat the situation when it match correctly of when we meet zero.\n",
     "\n",
-    "Now lets try it on example for better understanding. 'abce-abc-y-abce-abce'. I insert some '-' to make it easier to read. So, at some moment we come into position in forth part 'abceabce' we meet the symbol 'e' that is not equal to symbol y at the prefix. So, instead of recalculation of prefix function from zero we just check if the last prefix have the same 'little' prefix. In our situation 'abceabc' has the prefix equal to suffix 'abc', so instead of start from zero we try to check the substring from 'abc', because we already sure that it equal to our suffix. And if it matched we just write that p(i) = p(p(i-1)) + 1 and continue calculation. In this situation we have that 'abc' + 'e' is equal to our prefix 'abce', so `p` from this position is equal to 4."
+    "Now lets try it on example for better understanding. S='abceabcyabceabce' 'abce-abc-y-abce-abce'. I insert some '-' to make it easier to read. So, at some moment we come into position in forth part 'abceabce' we meet the symbol 'e' that is not equal to symbol y at the prefix. So, instead of recalculation of prefix function from zero we just check if the last prefix have the same 'little' prefix. In our situation 'abceabc' has the prefix equal to suffix 'abc', so instead of start from zero we try to check the substring from 'abc', because we already sure that it equal to our suffix. And if it matched we just write that `p(i) = p(p(i-1)) + 1` and continue calculation. In this situation we have that 'abc' + 'e' is equal to our prefix 'abce', so `p` from this position is equal to 4."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -90,7 +90,7 @@
    "source": [
     "# Knuth–Morris–Pratt algorithm\n",
     "\n",
-    "So, lets back to our main task to find substring. One Idea we already discuss - we just write 'string#fsfuyiuhaslfd` and try to calculate prefix function for all text. But take from us about `O(N)` additional memory what is to big. So, there is another idea of algorithm that can help us find substring and use only `O(M)` memeory, where M - the size of string that we try to find inside array.\n",
+    "So, lets back to our main task to find substring. One Idea we already discuss - we just write `string#fsfuyiuhaslfd` and try to calculate prefix function for all text. But take from us about `O(N)` additional memory what is to big. So, there is another idea of algorithm that can help us find substring and use only `O(M)` memeory, where M - the size of string that we try to find inside array.\n",
     "\n",
     "![morris](images/11-04/morris.jpg)\n",
     "\n",
