--- a/Homework/Homework.ipynb
+++ b/Homework/Homework.ipynb
@@ -174,7 +174,11 @@
   },
   {
    "source": [
-    "## 5.Segment Tree"
+    "## 5.Segment Tree\n",
+    "\n",
+    "Implement Segment Tree with function 'max' on segment. It should construct from integer array and give the unswer to question \"maximum on segment\" with O(logN) complexity. Plus to this it should correctly work with function \"change the elements on the segment by the specified number\" \n",
+    "- 1 point without lazy 'change in segment' function\n",
+    "- 1.5 points with lazy 'change in segment' function"
    ],
    "cell_type": "markdown",
    "metadata": {}
