Add python hints,numpy

--- a/Homework/Homework.ipynb
+++ b/Homework/Homework.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +168,81 @@
     "            a = random.randint (test[j][0]+1,test[j][1]-1)\n",
     "            b = random.randint (test[j+i][0]+1,test[j+i][1]-1)\n",
     "            test.append((a,b))\n",
-    "            \n",
-    "    return random.shuffle(test)"
+    "    random.shuffle(test)\n",
+    "    return test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[(27, 30),\n",
+       " (26, 43),\n",
+       " (45, 50),\n",
+       " (32, 38),\n",
+       " (21, 29),\n",
+       " (29, 40),\n",
+       " (40, 51),\n",
+       " (13, 34),\n",
+       " (23, 51),\n",
+       " (6, 11),\n",
+       " (18, 36),\n",
+       " (9, 15),\n",
+       " (18, 49),\n",
+       " (10, 21),\n",
+       " (4, 9),\n",
+       " (29, 37),\n",
+       " (41, 47),\n",
+       " (35, 40),\n",
+       " (14, 40),\n",
+       " (3, 28),\n",
+       " (22, 27),\n",
+       " (8, 25),\n",
+       " (15, 23),\n",
+       " (25, 40),\n",
+       " (28, 49),\n",
+       " (9, 39),\n",
+       " (26, 37),\n",
+       " (4, 39),\n",
+       " (15, 51),\n",
+       " (1, 5),\n",
+       " (17, 22),\n",
+       " (2, 35),\n",
+       " (25, 28),\n",
+       " (8, 44),\n",
+       " (8, 34),\n",
+       " (38, 41),\n",
+       " (12, 16),\n",
+       " (8, 29),\n",
+       " (3, 24),\n",
+       " (19, 39),\n",
+       " (8, 49),\n",
+       " (15, 19),\n",
+       " (20, 44),\n",
+       " (20, 25),\n",
+       " (28, 45),\n",
+       " (4, 46),\n",
+       " (48, 52),\n",
+       " (14, 42),\n",
+       " (3, 19),\n",
+       " (3, 13),\n",
+       " (37, 49),\n",
+       " (34, 44),\n",
+       " (14, 28),\n",
+       " (40, 44)]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "generate()"
    ]
   },
   {
