--- a/09-17 Variable, Loop,Conditions.ipynb
+++ b/09-17 Variable, Loop,Conditions.ipynb
@@ -17,7 +17,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.4.3"
+      "version": "3.8.3-final"
     },
     "colab": {
       "name": "lesson0.ipynb",
@@ -1118,6 +1118,34 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "source": [
+        "And even if part can be omitted actually). This is called ternary operator"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3 5\n4\n"
+          ]
+        }
+      ],
+      "source": [
+        "a = input()\n",
+        "a = int(a)\n",
+        "b = 5 if a<5 else a\n",
+        "print (a, b)\n",
+        "print (4 if a<4 else b)"
+      ]
     },
     {
       "cell_type": "markdown",
