--- a/09-23 Collections.ipynb
+++ b/09-23 Collections.ipynb
@@ -17,7 +17,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.4.3"
+      "version": "3.8.3-final"
     },
     "colab": {
       "name": "Lesson_1.ipynb",
@@ -2640,7 +2640,13 @@
       "source": [
         "###  Collections\n",
         "\n",
-        "The `collections` module has several modifications to the standard dictionary that make some things much easier (for example, counting different items in a list)"
+        "The `collections` module has several modifications to the standard dictionary that make some things much easier (for example, counting different items in a list)\n",
+        "\n",
+        "Elements:\n",
+        "- Counter\n",
+        "- DefaultDict\n",
+        "- NamedTuple\n",
+        "- Deque"
       ]
     },
     {
@@ -2709,8 +2715,115 @@
         "print (\"dict[20]\", dl_dict[20], sep=\"   \")\n",
         "print (\"dict\", dl_dict, sep=\"  \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "defaultdict(<class 'list'>, {})\n[]\ndefaultdict(<class 'list'>, {1: []})\ndict:    defaultdict(<class 'list'>, {1: ['A', 'A'], 2: ['A'], 100: ['C']})\ndict[1]   ['A', 'A']\ndict[20]   []\ndict  defaultdict(<class 'list'>, {1: ['A', 'A'], 2: ['A'], 100: ['C'], 20: []})\n"
+          ]
+        }
+      ]
+    },
+    {
+      "source": [
+        "### NamedTuple"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "source": [
+        "# Named Tuple used as more convenient tuple option. Its allows you named fields inside it. It will be very comfortable when you try to understand what element of tuple what realy mean.\n",
+        "#\n",
+        "#  As usual tuples it is unmutubale object mean you can not change it after creating. \n",
+        "\n",
+        "from collections import namedtuple\n",
+        "vector = namedtuple ('vector', ['x','y']) #So, here we create a constructor of tuples like vector\n",
+        "# And now we try to create one of them. \n",
+        "arrow = vector(3,5) # We create new named tuple with type vector\n",
+        "print (arrow)\n",
+        "print (arrow[0]) # and like in usual tuple we can ask it with index\n",
+        "print (arrow.x, arrow.y) # or with name of field - this is the main point of such structure\n",
+        "print (*arrow) # and of course we can create from it list of arguments "
+      ],
+      "cell_type": "code",
+      "metadata": {},
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vector(x=3, y=5)\n3\n3 5\n3 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vector3(x=1, y=2, i=3, j=4)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# To concatenate two tuples you need to create a new one from previous\n",
+        "vector2 = namedtuple ('vector2', ['i','j']) # another one named tuple\n",
+        "vector3 = namedtuple ('vector3', vector._fields + vector2._fields)\n",
+        "print (vector3(1,2,3,4))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'x': 3, 'y': 5}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
+      "source": [
+        "# And of course you can turn it into dictionary\n",
+        "arrow._asdict()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vector(x=3, y=4)\nvector(x=3, y=4)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Plus to this if you realy whant change one field, but not whant write something like\n",
+        "arrow2 = vector (arrow.x, 4)\n",
+        "print (arrow2)\n",
+        "\n",
+        "# You can use function _replace(field=value)\n",
+        "arrow3 = arrow._replace (y = 4)\n",
+        "print (arrow3)"
+      ]
     }
   ]
 }
