--- a/11-04 Prefix Function.ipynb
+++ b/11-04 Prefix Function.ipynb
@@ -49,14 +49,19 @@
    "source": [
     "## Prefix function\n",
     "\n",
-    "First of all, we need find the string inside some text. Usual prefix or suffix not help us to do this, but what if we write our string before text like `string#Ttttttteeeeeeeexxxxxxxstringttttttttt`, than our prefix with length of string will be exactly our string. And to find it inside the text we need find where the prefix occurs again in the text. Function, that calculate it for each position inside the text called prefix-function.\n",
+    "First of all, we need find the string inside some text. Usual prefix or suffix not help us to do this, but what if we write our string before text like `string#Ttttttteeeeeeeexxxxxxxstringttttttttt`, than our prefix with length of string will be exactly our string. And to find it inside the text we need find where the prefix occurs again in the text. Function, that calculate it for each position inside the text called **prefix-function**.\n",
     "\n",
-    "`The prefix function` is the function that for each position inside string calculate the maximum length of the suffix of substring \\[0;i\\] that matches suffix of this string. In other world we take our string length S, cut from it the peace (0;i) and calculate how many symbols at the beginning matches symbols at the end.\n",
+    "`The prefix function` **is the function that for each position inside string calculate the maximum length of the suffix of substring \\[0;i\\] that matches suffix of this string.** In other world we take our string length S, cut from it the peace (0;i) and calculate how many symbols at the beginning matches symbols at the end.\n",
     "\n",
     "Let is look to our example 'abracadabra'. For each position we take the substring from the beginning to this position. So, for p(2) we calc 'ab', so a!=b and that is mean that prefix function is equal to zero for this case. for p(9) we process substring 'abracadab' and here we have that first two symbols 'ab' is equal to last two symbols of string 'ab', but if we try to take three symbols from each end we got 'abr'!='dab' that mean that the result of our suffix function is 2.\n",
     "\n",
-    "![prefix-function](images/11-04/prefix-function.png)\n",
-    "\n",
+    "![prefix-function](images/11-04/prefix-function.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "So, with prefix function we just try to match the beginning and the end of substring. And how you guessed already the simplest way to calculate it is direct calculation. So as in algorithm of search substring for each position we try to match maximum number of symbols at the position with the prefix of our string. But, as in previous algorithm, it can take from us about `O(n^2)` operations. However we did not learn dynamic programming for nothing. So let is use it here.\n",
     "\n",
     "The only two parameters that we have is the string itself `S` and the position `i` where we want to calculate our suffix function `p(i)`. And let is just calculate this function for `p(i-1) = k` and try to use this answer for our task. Ok, let is assume that previous position of function was `k` mean that substrings (0;k-1) and (i-1-k;i-1) is equal. There can be some different situations and first of all:\n",
@@ -73,14 +78,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Example in action"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![prefix_compare](https://miro.medium.com/max/1400/1*OIb4erqMedwaze8aTUi9gw.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Knuth–Morris–Pratt algorithm\n",
     "\n",
-    "So, lets back to our main task to find substring. One Idea we already discuss - we just write `string#fsfuyiuhaslfd` and try to calculate prefix function for all text. But take from us about `O(N)` additional memory what is to big. So, there is another idea of algorithm that can help us find substring and use only `O(M)` memeory, where M - the size of string that we try to find inside array.\n",
+    "So, lets back to our main task to find substring. One Idea we already discuss - we just write `string#fsfuyiuhaslfd` and try to calculate prefix function for all text. But take from us about `O(N)` additional memory what is to big. So, there is another idea of algorithm that can help us find substring and use only `O(M)` memory, where M - the size of string that we try to find inside array.\n",
     "\n",
     "![morris](images/11-04/morris.jpg)\n",
     "\n",
     "The main idea of it is that we try to match our string with the text at position `i` like in first algorithm that we discuss. But instead of calculate it for each position we precalculate the prefix function for our string and use it to find the position inside string, where we can start to match our string from this position in text without going back to the beginning. The complexity of it still `O(N + M)`, but we not need search special symbol # to divide string from text and plus to this we spend only `O(M)` memory for algorithm."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# One more example in action"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![prefix_compare](https://i2.wp.com/codinggladiators.com/wp-content/uploads/2021/07/kmp.gif?resize=703%2C329)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Additional materials "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* https://www.youtube.com/watch?v=nJbNe0Yzjhw&t=1112s\n",
+    "* https://www.youtube.com/watch?v=kBW6oPaVjq0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* https://habr.com/ru/post/307220/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
